# discord-audio-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  deno.json  deps.ts  main.ts  package-lock.json  package.json
.zed/: settings.json
commands/: command.ts  index.ts  jump.ts  play.ts  queue.ts  skip.ts
src/: deps.ts  handler.rs  handlers.rs  index.js  index.ts  main.rs  main.ts  player.rs  player.ts  queue.rs  util.js  util.rs  util.ts
src/commands/: command.ts  index.js  index.ts  mod.rs  ping.js  ping.ts  play.js  play.rs  play.ts  queue.rs  queue.ts  skip.js  skip.rs  skip.ts
src/player/: inner.rs  mod.rs  player.ts  service.ts
src/service/: player.js
util/: discord.ts  player.ts  video.ts  yt-dlp.ts
