[package]
name = "discord-audio-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serenity = { features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend", "builder"], version = "0.12.2" }
songbird = "0.4.3"
tokio = { version = "1.39.2", features = [ "full" ] }
reqwest = "0.11"
symphonia = { features = [ "aac", "mp3", "isomp4", "alac" ], version = "0.5.2" }
poise = "0.6.1"
